Corrections part 2: changed Clock font-size, changed list font-size, styled scrollbar,

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -26,17 +26,19 @@ body {
     flex-direction: row;
     align-items: flex-start;
     justify-content: space-between;
+    padding: 2vw 5vw;
   }
 
   > div {
+    width: 70%;
     display: flex;
     flex-direction: column;
     align-items: center;
 
     @include media-horizontal {
-      width: 40%;
-      padding-left: 2vw;
+      padding: 0 4vw 0 2vw;
       height: 50vh;
+      width: 50%;
     }
 
     figure {
@@ -57,11 +59,12 @@ body {
 
     .clock {
       padding: 5vw;
-      font-size: 15vw;
+      font-size: 23vw;
       font-weight: bold;
 
       @include media-horizontal {
-        font-size: 10vw
+        padding: 2vw 5vw;
+        font-size: 15vw
       }
     }
   }
@@ -81,23 +84,19 @@ body {
   @include media-horizontal {
     width: 50%;
     overflow: auto;
-    height: 80vh;
+    height: 90vh;
     justify-content: flex-start;
   }
 }
 
-.list-name {
-  margin-bottom: 3vh;
-}
-
 li {
-  font-size: 18px;
+  font-size: 20px;
   padding: 1vw .5vw;
   text-transform: initial;
   font-weight: normal;
 
   @include media-horizontal {
-    font-size: 22px;
+    font-size: 28px;
   }
 }
 
@@ -126,8 +125,8 @@ li {
     border-style: solid;
     border-width: 0 2px 2px 0;
     transform: rotate(45deg);
-    height: 15px;
-    width: 7px;
+    height: 20px;
+    width: 10px;
     left: -5vw;
 
     @include media-horizontal {
@@ -173,5 +172,51 @@ li {
       background-color: #b2b2b2;
     }
   }
+}
+
+//Scrollbar
+
+::-webkit-scrollbar {
+  width: 24px;
+  border: 5px solid white;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #b0b0b0;
+  background-clip: padding-box;
+  border-radius: 14px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #bbbbbb;
+}
+/* Buttons */
+::-webkit-scrollbar-button:single-button {
+  background-color: #bbbbbb;
+  display: block;
+  border-style: solid;
+  height: 18px;
+  width: 21px;
+}
+/* Up */
+::-webkit-scrollbar-button:single-button:vertical:decrement {
+  border-width: 0 12px 12px 12px;
+  border-color: transparent transparent #555555 transparent;
+  border-radius: 10px 10px 0 0;
+}
+
+::-webkit-scrollbar-button:single-button:vertical:decrement:hover {
+  border-color: transparent transparent #777777 transparent;
+}
+/* Down */
+::-webkit-scrollbar-button:single-button:vertical:increment {
+  border-width: 12px 12px 12px;
+  border-color: #555555 transparent transparent transparent;
+  border-radius: 0 0 10px 10px;
+}
+
+::-webkit-scrollbar-button:vertical:single-button:increment:hover {
+  border-color: #777777 transparent transparent transparent;
 }
 
